Upgrade to java 17 (#239)
* upgrading springboot and adding custom liquibase

* formatting errors

* auto patch increment

* revert minor changes to sql files

* Downgrade to 2.5.12

* Try deleting not used liquibase changes

* Upgrade back to 2.6.7

* Update dependencies

* Attempt to fix

* auto patch increment

* Copy what case did

* Copy pasta error

* Another copy paste mistake

* try higher springboot

* do not create sequence if it exists

* change ddl auto

* change liquibase to not run

* change liquibase back

* auto patch increment

* auto patch increment

* create sampleunit table if none exists

* revert changes to sql file

* fix typo

* add liquibase schema property and change database url to match other services

* removing hibernate properties

* removing custom provider

* upgrade to java 17, remove orika for custom mapping, update dependancies for compatibility

* add custom mapper, edit PR template

* bump java version in github workflow

* Revert "removing hibernate properties"

This reverts commit d66d3c1d5c10bd87166244583da869760d0438c1.

* Revert "removing custom provider"

This reverts commit 20026e72c43fbbf67ba76611bf1b9c1570dceb89.

* add spring liquibase default schema

* moving hibernate default_schema location

* set databasechangelog and databasechangeloglock tables

* fix small error

* test

* Enable hibernate logging

* Move default_schema to hibernate root

* Try hibernate ddl none

* Retry hibernate ddl update

* hibernate ddl none

* Trying a new spring datasource property

* Dont defer the running of the script

* Revert and install pgcrypto

* set path

* Testing impact of groundzero script if any

* Deleting groundzero

* Reinstate deltas

* Deleting spring boot ddl

* Adding schema.sql back in

* Fixing pgcrypto quotes

* Dont defer initialization

* Simplifying initialisation

* Updating schema name

* Back to hib